0.3
~~~

o Removed --log-dir=LOG_DIR option as it is less useful than expected


0.2
~~~

o Using readline to provide fancy command line edition and completion from
history
o Incomplete lines are printed after some delay
o Remote shells can be dynamically added/deleted/renamed
o New option --quick-sh to avoid launching a full blown session
o Added hostname expansion: for example host<1-100> and host<001-100>
o Added an option to read hostnames from a file
o Removed useless option to print only the first line of output
o Misc. bug fixes and optimizations
o Added a man page

0.1
~~~

o First release